test/vm/fails/invalid_send_1.js
send(bech32("MMX"), 1, bech32("MMX"));